# LangGraph-Course-freeCodeCamp

Exercises/: Exercise_Graph4.ipynb
MyVersion/: main.py  pyproject.toml
MyVersion/agents/agent1/: main.py
MyVersion/agents/agent2/: logging.txt  main.py
MyVersion/agents/agent3/: main.py
MyVersion/agents/agent4/: Request_for_Absence_from_Class_Next_Week.txt  main.py
MyVersion/agents/agent5/: cyber_act.py  ict_bill.txt  main.py
MyVersion/agents/agent5/vector_db/: chroma.sqlite3
MyVersion/graph1/: code.ipynb  diagram.excalidraw
MyVersion/graph2/: code.ipynb  exercise.ipynb
MyVersion/graph3/: code.ipynb  exercise.ipynb
MyVersion/graph4/: code.ipynb
MyVersion/graph5/: plan.excalidraw
MyVersion/graphs/graph1/: exercise.ipynb
MyVersion/graphs/graph4/: exercise.ipynb
MyVersion/graphs/graph5/: code.ipynb  exercise.ipynb
